# vidtide-anon

./: .gitignore  CITATION.cff  DATASHEET.md  LICENSE  README.md  croissant.json  pyproject.toml  requirements.txt
config/: pipeline.yaml.example
crawlers/: README.md  __init__.py
dedup/: README.md  __init__.py
docs/: OPT_OUT.md  PIPELINE.md  REPRODUCIBILITY.md
eval/: README.md  __init__.py
filters/: README.md  __init__.py
manifests/M0/: README.md
pipeline/: __init__.py
release/: __init__.py
scripts/: README.md  age_videos.py  analyze_predict_results.py  backfill_published_at.py  bench_small.py  cleanlab_label_audit.py  cluster_unknown.py  compute_gap.py  compute_metrics.py  crawl_and_push.py  data_scaling_driver.py  demamba_full_ft.py  download_nsgvd_crafter_weights.py  download_ood_fresh.py  download_videos.py  eval_lp_bilionly.py  extract_paper_numbers.py  filter_vtuber_tutorial.py  format_e1_results.py  ft_eval_all_slices.py  ft_eval_slices.py  ft_extract_features.py  ft_make_split.py  ft_train_lp.py  hard_case_analysis.py  label_audit.py  mmaction_extract_features.py  mmaction_full_ft.py  mmaction_train_lp.py  near_dup_audit.py  nsgvd_eval_best.py  nsgvd_extract_features.py  nsgvd_train_discriminator.py  ood_eval_lp.py  per_generator_full_pool.py  plot_data_scaling.py  plot_paper_figures.py  predict_unknown_generators.py  process_pending.py  recompute_dedup.py  (+4 more)
server/: config.py  main.py
server/crawler/: __init__.py  _generator.py  _thumbnail.py  base.py  bilibili.py  bilibili_real.py  douyin.py  kinetics.py  kuaishou.py  pexels.py  reddit.py  (+3 more)
(+54 files in other folders)
